# obsidust

./: Cargo.toml  README.md
src/: delete_tagless_files.rs  main.rs  move_files.rs  utils.rs
