[package]
name = "obsidust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir= "2.3.3"
clap = { version = "4.2.2", features = ["derive"] }
regex = "1.7.3"
dotenv = "0.15.0"

[[bin]]
name = "move_files"
path = "src/move_files.rs"

[[bin]]
name = "delete_tagless_files"
path = "src/delete_tagless_files.rs"
